--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Git test</title>
+    <title>Git test 2</title>
 </head>
 <body>
-
+<h1>My test</h1>
 </body>
 </html>
